--- a/cmd/auction/env-example.env
+++ b/cmd/auction/env-example.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017
+# MONGODB_URI=mongodb://localhost:27017  # Note: usa 'mongodb' se for docker (nome do service), não 'localhost'
+MONGODB_URI=mongodb://mongodb:27017  # Note: usa 'mongodb' (nome do service), não 'localhost'
 MONGODB_DATABASE=auctions
 BATCH_INSERT_INTERVAL=7m
 MAX_BATCH_SIZE=10
